# translation-project

./: .env  .env.production  .gitignore  .prettierrc  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  build-app.bat  cleanup.bat  eslint.config.js  installer.bat  package-lock.json  package.json  postcss.config.js  rules.md  setup-and-run.bat  start-dev.bat  tailwind.config.js  tsconfig.json  vercel.json  vite.config.ts
.github/workflows/: ci.yml
backend/: Dockerfile  locustfile.py  main.py  monitoring.py  railway.toml  requirements.txt  security.py
backend/models/: translation_memory.py
backend/services/: translation_memory_service.py
backend/tests/: test_translation.py
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/: AIProviderSelector.tsx  AdminControl.tsx  ApiKeyModal.tsx  CharacterPronouns.tsx  ErrorBoundary.tsx  LanguageSelector.tsx  LoadingSpinner.tsx  NovelGlossary.tsx  ProgressTracker.tsx  TermsManager.tsx  TextEditor.tsx  TextWithSelection.tsx  TranslationHistory.tsx  TranslationMemory.tsx  WordPairs.tsx
src/lib/: ai-providers.ts  ai-service.ts  characters.ts  gemini.ts  text-analysis.ts  translation-cache.ts  types.ts
src/lib/utils/: parsing.ts
