[package]
name = "novel-translator"
version = "0.1.0"
description = "A Novel Translation Application"
authors = ["Your Name"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.70"

[build-dependencies]
tauri-build = { version = "1.6.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.6.3", features = [ "dialog-all", "fs-all", "path-all", "shell-open"] }

[features]
custom-protocol = [ "tauri/custom-protocol" ]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
